--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 5rem 0; /* Previene superposiciones cuando la pantalla es muy baja en formato horizontal */
   display: flex;
   align-items: center;
   justify-content: center;
